--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,29 @@
 Package: marksman
-Title: What the Package Does (One Line, Title Case)
+Title: Shoot Down Your Specific Aims
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Anish",
+           family = "Shah",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "asshah4@emory.edu",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat,
+    knitr,
+    rmarkdown
+Imports: 
+    dplyr,
+    magrittr,
+    parsnip,
+    purrr,
+    tibble,
+    tidyr,
+    methods,
+    card
+VignetteBuilder: knitr
