--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ RoxygenNote: 7.1.1
 Suggests: 
     testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    covr
 Imports: 
     dplyr,
     magrittr,
