updated travis yaml to handle build fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,14 @@
 language: R
 cache: packages
 warnings_are_errors: true
+
+addons:
+	apt:
+		packages:
+			- libudunits2-dev
+
+r_packages:
+  - covr
+
+after_success:
+	-Rscript -e 'covr::codecov()'
