--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-
+# Basics
 language: R
 cache: packages
-addons:
-  apt:
-    packages:
-      - libudunits2-dev
+warnings_are_errors: true
+r_github_packages:
+  - asshah4/card
 
+# Linux core
+sudo: required
+dist: xenial
+before_install:
+  - sudo add-apt-repository ppa:ubuntugis/ppa --yes
+  - sudo apt-get --yes --force-yes update -qq
+  - sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev
+
+# Coverage
 r_packages:
   - covr
 
