cleaned up and started over on the aims and bullets functions, thinking about a more streamlined approach to how to use this information in a helpful pipeline

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(ballistics,aim)
 S3method(ballistics,bullet)
 S3method(ballistics,default)
-S3method(print,bullet)
 S3method(reload,aim)
 S3method(reload,bullet)
 S3method(reload,default)
@@ -12,5 +11,6 @@ export(ballistics)
 export(bullet)
 export(fire)
 export(reload)
+export(specific_aims)
 importFrom(dplyr,mutate)
 importFrom(magrittr,"%>%")
