--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,4 +1,4 @@
-^marksman\.Rproj$
+^octomod\.Rproj$
 ^\.Rproj\.user$
 ^LICENSE\.md$
 ^README\.Rmd$
@@ -8,3 +8,4 @@
 ^\.github$
 ^\.travis\.yml$
 ^codecov\.yml$
+^sandbox.R$
