--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,10 @@
-pandoc: 2.9.2.1
+pandoc: 2.11.2
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  overview: overview.html
-last_built: 2020-11-29T04:46Z
+  octomod: octomod.html
+last_built: 2020-12-20T22:40Z
 urls:
-  reference: https://asshah4.github.io/marksman//reference
-  article: https://asshah4.github.io/marksman//articles
+  reference: https://asshah4.github.io/octomod//reference
+  article: https://asshah4.github.io/octomod//articles
 
