--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,8 @@
 S3method(print,octomod)
 export(add_arm)
 export(add_core)
-export(add_outfit)
+export(equip)
 export(octomod)
 export(remove_core)
 export(update_core)
-importFrom(dplyr,mutate)
 importFrom(magrittr,"%>%")
