still developmental, but added sharpen function to add AUC metrics to the datasets

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,8 @@ Imports:
     tidymodels,
     progress,
     rlang,
-    broom
+    broom,
+    yardstick
 Remotes:
     asshah4/card
 VignetteBuilder: knitr
