updated octomod to allow for splitting variable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,10 @@ export(equip)
 export(octomod)
 export(remove_core)
 export(sharpen)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,rowwise)
+importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
+importFrom(purrr,map)
+importFrom(tibble,tibble)
