updated readme prior to starting new vignette on alternative API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,6 @@ importFrom(dplyr,rowwise)
 importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
+importFrom(rlang,"!!")
+importFrom(rlang,sym)
 importFrom(tibble,tibble)
