--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,9 @@ pandoc: 2.11.2
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
+  development: development.html
   octobeast: octobeast.html
-last_built: 2020-12-30T15:11Z
+last_built: 2021-05-14T11:55Z
 urls:
   reference: https://asshah4.github.io/octomod//reference
   article: https://asshah4.github.io/octomod//articles
