rename repository, have a build_models() function that works, and am developing the collect_findings() feature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,octomod)
 export("%>%")
 export(add_hypothesis)
 export(arm)
+export(build_models)
 export(change_core)
 export(core)
 export(equip)
