--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(add_hypothesis)
 export(arm)
 export(build_models)
 export(change_core)
+export(collect_findings)
 export(core)
 export(equip)
 export(octomod)
