updated all tests to basic tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(sharpen)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rowwise)
+importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
