updating name as brainstorms come

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,12 @@ export("%>%")
 export(add_hypothesis)
 export(build_models)
 export(collect_findings)
+export(fit_calls)
+export(fit_models)
 export(make_formulas)
 export(project)
 export(set_data)
+export(tidy_tests)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
