--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(add_data,framework)
 S3method(add_data,hypothesis)
+S3method(hypothesize,default)
 S3method(hypothesize,formula)
 S3method(print,project)
 export("%>%")
@@ -15,11 +16,10 @@ export(fit_models)
 export(framework)
 export(hypothesize)
 export(make_formulas)
-export(new_hypothesis)
+export(make_hypothesis)
 export(project)
 export(set_data)
 export(tidy_tests)
-export(tie_hypothesis_to_data)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
