--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,18 +8,26 @@ S3method(print,project)
 export("%>%")
 export(add_data)
 export(add_hypothesis)
+export(build_frames)
 export(build_models)
 export(collect_findings)
 export(expand_formula)
 export(fit_calls)
 export(fit_models)
 export(framework)
+export(get_combination)
+export(get_data)
+export(get_formulae)
+export(get_parameters)
+export(get_test)
 export(hypothesize)
 export(make_formulas)
 export(make_hypothesis)
 export(project)
 export(set_data)
 export(tidy_tests)
+export(update_hypothesis)
+export(update_status)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
