--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,31 +2,32 @@
 
 S3method(hypothesize,default)
 S3method(hypothesize,formula)
+S3method(hypothesize,list)
 S3method(print,hypothesis)
 S3method(print,project)
 export("%>%")
 export(add_hypothesis)
-export(build_frames)
 export(build_models)
+export(build_study)
 export(collect_findings)
 export(expand_formula)
+export(fetch_combination)
+export(fetch_data)
+export(fetch_formulae)
+export(fetch_names)
+export(fetch_parameters)
+export(fetch_test)
 export(fit_calls)
 export(fit_models)
-export(framework)
-export(get_combination)
-export(get_data)
-export(get_formulae)
-export(get_names)
-export(get_parameters)
-export(get_test)
 export(hypothesize)
 export(make_formulas)
 export(make_hypothesis)
 export(project)
 export(set_data)
+export(study)
 export(tidy_tests)
 export(update_hypothesis)
-export(update_status)
+export(update_study)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
