--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,9 +1,9 @@
-url: https://asshah4.github.io/aims/
+url: https://asshah4.github.io/path/
 
 destination: docs
 
 home:
-  title: A Many-Handed Approach to Multiple Models
+  Title: A Clinical Approach to Modeling Causality
   description: A way to handle multiple models, with an emphasis on hypothesis testing
 
 navbar:
@@ -25,4 +25,4 @@ navbar:
       href: reference/index.html
     github:
       icon: fab fa-github fa-lg
-      href: https://github.com/asshah4/aims/
+      href: https://github.com/asshah4/path/
