--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,16 @@
 
 S3method(hypothesize,default)
 S3method(hypothesize,formula)
-S3method(hypothesize,list)
-S3method(print,hypothesis)
 S3method(print,project)
+S3method(propose_hypothesis,default)
+S3method(propose_hypothesis,formula)
+S3method(propose_hypothesis,list)
 export("%>%")
 export(add_hypothesis)
 export(build_models)
-export(build_study)
+export(build_studies)
 export(collect_findings)
+export(draw_hypothesis)
 export(expand_formula)
 export(fetch_combination)
 export(fetch_data)
@@ -22,8 +24,13 @@ export(fit_models)
 export(hypothesize)
 export(make_formulas)
 export(make_hypothesis)
+export(modify_study_data)
+export(modify_study_formula)
+export(modify_study_test)
 export(project)
+export(propose_hypothesis)
 export(set_data)
+export(studies)
 export(study)
 export(tidy_tests)
 export(update_hypothesis)
