changed name... again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(make_formulas)
 export(make_hypothesis)
 export(modify_study_data)
 export(modify_study_formula)
+export(modify_study_status)
 export(modify_study_test)
 export(project)
 export(propose_hypothesis)
