completed the study building functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,20 @@
 
 S3method(hypothesize,default)
 S3method(hypothesize,formula)
-S3method(print,project)
-S3method(propose_hypothesis,default)
-S3method(propose_hypothesis,formula)
-S3method(propose_hypothesis,list)
+S3method(print,hypothesis)
+S3method(print,study)
 export("%>%")
-export(add_hypothesis)
-export(build_models)
-export(build_studies)
-export(collect_findings)
+export(add_study_data)
+export(add_study_formula)
+export(add_study_paths)
+export(add_study_status)
+export(add_study_test)
+export(construct_dag)
+export(construct_maps)
+export(construct_models)
 export(draw_hypothesis)
 export(expand_formula)
+export(expand_paths)
 export(fetch_combination)
 export(fetch_data)
 export(fetch_formulae)
@@ -20,25 +23,12 @@ export(fetch_names)
 export(fetch_parameters)
 export(fetch_test)
 export(fit_calls)
-export(fit_models)
+export(fit_parsnip_models)
 export(hypothesize)
-export(make_formulas)
-export(make_hypothesis)
-export(modify_study_data)
-export(modify_study_formula)
-export(modify_study_status)
-export(modify_study_test)
-export(project)
-export(propose_hypothesis)
-export(set_data)
-export(studies)
 export(study)
 export(tidy_tests)
 export(update_hypothesis)
 export(update_study)
-importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
-importFrom(dplyr,select)
 importFrom(magrittr,"%>%")
-importFrom(rlang,"!!")
-importFrom(rlang,sym)
+importFrom(rlang,"!!!")
