--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,28 +7,29 @@ S3method(print,study)
 export("%>%")
 export(add_study_data)
 export(add_study_formula)
-export(add_study_paths)
 export(add_study_status)
 export(add_study_test)
-export(construct_dag)
-export(construct_maps)
 export(construct_models)
+export(construct_paths)
 export(draw_hypothesis)
 export(expand_formula)
 export(expand_paths)
+export(extract_models)
 export(fetch_combination)
 export(fetch_data)
 export(fetch_formulae)
 export(fetch_names)
-export(fetch_parameters)
+export(fetch_raw)
 export(fetch_test)
+export(fetch_tidy)
 export(fit_calls)
 export(fit_parsnip_models)
 export(hypothesize)
+export(map_dag)
 export(study)
 export(tidy_tests)
 export(update_hypothesis)
-export(update_study)
+export(update_study_status)
 importFrom(dplyr,mutate)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!!")
