fixed the vignette, should build now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,8 @@ export(add_study_data)
 export(add_study_formula)
 export(add_study_status)
 export(add_study_test)
-export(construct_models)
-export(construct_paths)
+export(carve_out)
+export(construct_map)
 export(draw_hypothesis)
 export(expand_formula)
 export(expand_paths)
