--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(print,study)
 export("%>%")
 export(add_study_data)
 export(add_study_formula)
+export(add_study_path)
 export(add_study_status)
 export(add_study_test)
 export(carve_out)
@@ -15,6 +16,7 @@ export(draw_hypothesis)
 export(expand_formula)
 export(expand_paths)
 export(extract_models)
+export(fetch_call)
 export(fetch_combination)
 export(fetch_data)
 export(fetch_formulae)
