added teh derive function, and simplified the names of hte base/core functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,19 +10,22 @@ export(add_study_formula)
 export(add_study_path)
 export(add_study_status)
 export(add_study_test)
-export(carve_out)
-export(construct_map)
-export(draw_hypothesis)
+export(construct)
+export(derive)
+export(draw)
 export(expand_formula)
 export(expand_paths)
-export(extract_models)
+export(extract)
 export(fetch_call)
 export(fetch_combination)
 export(fetch_data)
+export(fetch_data_name)
 export(fetch_formulae)
 export(fetch_names)
 export(fetch_raw)
+export(fetch_strata)
 export(fetch_test)
+export(fetch_test_opts)
 export(fetch_tidy)
 export(fit_calls)
 export(fit_parsnip_models)
