added parallel confounding checking

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(fit_calls)
 export(fit_parsnip_models)
 export(hypothesize)
 export(map_dag)
+export(reconstruct)
 export(study)
 export(tidy_tests)
 export(update_hypothesis)
