--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,7 @@ export(fetch_tidy)
 export(fit_calls)
 export(fit_parsnip_models)
 export(hypothesize)
-export(map_dag)
+export(propose)
 export(reconstruct)
 export(study)
 export(tidy_tests)
