improved verb naming

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,17 +5,19 @@ S3method(hypothesize,formula)
 S3method(print,hypothesis)
 S3method(print,study)
 export("%>%")
+export(add_hypothesis)
 export(add_study_data)
 export(add_study_formula)
 export(add_study_path)
 export(add_study_status)
 export(add_study_test)
-export(construct)
-export(derive)
+export(construct_map)
+export(create_study)
 export(draw)
 export(expand_formula)
 export(expand_paths)
-export(extract)
+export(extract_dagitty)
+export(extract_models)
 export(fetch_call)
 export(fetch_combination)
 export(fetch_data)
@@ -27,12 +29,15 @@ export(fetch_strata)
 export(fetch_test)
 export(fetch_test_opts)
 export(fetch_tidy)
+export(find_confounders)
 export(fit_calls)
 export(fit_parsnip_models)
 export(hypothesize)
-export(propose)
-export(reconstruct)
-export(study)
+export(reconstruct_map)
+export(set_data)
+export(set_formulae)
+export(set_tests)
+export(set_vars)
 export(tidy_tests)
 export(update_hypothesis)
 export(update_study_status)
