added a new simple GT wrapper for sequential models that is quite nice

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Imports:
     methods,
     rlang,
     lifecycle,
-    tidygraph
+    tidygraph,
+    gt,
 Remotes:
     asshah4/dagger
 VignetteBuilder: knitr
