--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(hypothesize,tidy_dagitty)
 S3method(print,hypothesis)
 S3method(print,study)
 export("%>%")
+export(":=")
 export(add_hypothesis)
 export(construct_map)
 export(create_study)
@@ -34,9 +35,14 @@ export(fit_calls)
 export(fit_parsnip_models)
 export(hypothesize)
 export(reconstruct)
+export(tbl_sequential)
 export(tidy_tests)
 export(update_hypothesis)
+import(gt)
+importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!!")
+importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(tidygraph,as_tbl_graph)
