added  function for sequential model tables and a quick theme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,11 +36,14 @@ export(fit_parsnip_models)
 export(hypothesize)
 export(reconstruct)
 export(tbl_sequential)
+export(theme_gt_compact)
 export(tidy_tests)
 export(update_hypothesis)
 import(gt)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(gt,pct)
+importFrom(gt,px)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!!")
 importFrom(rlang,":=")
