--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,6 @@ export(":=")
 export(add_hypothesis)
 export(construct_map)
 export(create_study)
-export(draw)
 export(expand_formula)
 export(expand_paths)
 export(extract_dagitty)
@@ -31,6 +30,7 @@ export(fetch_test)
 export(fetch_test_opts)
 export(fetch_tidy)
 export(find_confounders)
+export(find_significant)
 export(fit_calls)
 export(fit_parsnip_models)
 export(hypothesize)
