--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,14 +5,15 @@ S3method(hypothesize,default)
 S3method(hypothesize,formula)
 S3method(hypothesize,list)
 S3method(hypothesize,recipe)
+S3method(hypothesize,rx)
 S3method(hypothesize,tidy_dagitty)
 S3method(print,hypothesis)
 S3method(print,model_map)
 export("%>%")
 export(":=")
 export(add_hypothesis)
-export(construct_models)
-export(create_map)
+export(construct_tests)
+export(create_models)
 export(expand_formula)
 export(extract_models)
 export(fetch_call)
@@ -35,12 +36,9 @@ export(tbl_sequential)
 export(theme_gt_compact)
 export(tidy_tests)
 export(update_hypothesis)
-import(gt)
 importFrom(dplyr,across)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
-importFrom(gt,pct)
-importFrom(gt,px)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
