added tbl_compare function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(add_hypothesis)
 export(construct_tests)
 export(create_models)
 export(expand_formula)
-export(extract_models)
+export(extract_results)
 export(fetch_call)
 export(fetch_combination)
 export(fetch_data)
@@ -23,15 +23,17 @@ export(fetch_data_name)
 export(fetch_formulae)
 export(fetch_names)
 export(fetch_raw)
+export(fetch_special)
 export(fetch_strata)
 export(fetch_test)
 export(fetch_test_opts)
-export(fetch_tidy)
 export(find_confounders)
 export(fit_calls)
 export(fit_parsnip_models)
+export(flatten)
 export(hypothesize)
 export(reconstruct)
+export(tbl_compare)
 export(tbl_sequential)
 export(theme_gt_compact)
 export(tidy_tests)
