updated gt tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(hypothesize,rx)
 S3method(hypothesize,tidy_dagitty)
 S3method(print,hypothesis)
 S3method(print,model_map)
+S3method(tbl_models,data.frame)
 export("%>%")
 export(":=")
 export(add_hypothesis)
@@ -34,6 +35,7 @@ export(flatten)
 export(hypothesize)
 export(reconstruct)
 export(tbl_compare)
+export(tbl_models)
 export(tbl_sequential)
 export(theme_gt_compact)
 export(tidy_tests)
