--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,12 @@ S3method(hypothesize,tidy_dagitty)
 S3method(list_of_models,default)
 S3method(list_of_models,list)
 S3method(list_of_models,list_of_formulas)
+S3method(obj_print_data,list_of_models)
 S3method(print,hypothesis)
 S3method(print,model_map)
 S3method(tbl_models,data.frame)
+S3method(vec_ptype_abbr,list_of_models)
+S3method(vec_ptype_full,list_of_models)
 export("%>%")
 export(":=")
 export(add_hypothesis)
@@ -40,7 +43,6 @@ export(flatten)
 export(hypothesize)
 export(list_of_models)
 export(mdls)
-export(obj_print_data.list_of_models)
 export(reconstruct)
 export(tbl_compare)
 export(tbl_models)
@@ -48,8 +50,7 @@ export(tbl_sequential)
 export(theme_gt_compact)
 export(tidy_tests)
 export(update_hypothesis)
-export(vec_ptype_abbr.list_of_models)
-export(vec_ptype_full.list_of_models)
+import(vctrs)
 importFrom(dplyr,across)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
