looking at model expansion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(hypothesize,list)
 S3method(hypothesize,recipe)
 S3method(hypothesize,rx)
 S3method(hypothesize,tidy_dagitty)
+S3method(labels,list_of_models)
 S3method(list_of_models,default)
 S3method(list_of_models,list)
 S3method(list_of_models,list_of_formulas)
@@ -40,10 +41,12 @@ export(fit.list_of_formulas)
 export(fit_calls)
 export(fit_parsnip_models)
 export(flatten)
+export(groups.list_of_models)
 export(hypothesize)
 export(list_of_models)
 export(mdls)
 export(reconstruct)
+export(roles.list_of_models)
 export(tbl_compare)
 export(tbl_models)
 export(tbl_sequential)
