--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,11 +20,12 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends:
-    R (>= 4.0.0)
+    R (>= 4.0.0),
+    vctrs (>= 0.3.8.0),
+    forks,
 Imports: 
     lifecycle,
     methods,
-    vctrs (>= 0.3.8.0),
     forks,
     dplyr,
     magrittr,
