--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ S3method(hypothesize,recipe)
 S3method(hypothesize,rx)
 S3method(hypothesize,tidy_dagitty)
 S3method(labels,list_of_models)
+S3method(labels,mdls)
 S3method(list_of_models,default)
 S3method(list_of_models,list)
 S3method(list_of_models,list_of_formulas)
 S3method(obj_print_data,list_of_models)
+S3method(pillar_shaft,list_of_models)
 S3method(print,hypothesis)
 S3method(print,model_map)
 S3method(roles,list_of_models)
@@ -57,6 +59,7 @@ importFrom(dplyr,across)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(magrittr,"%>%")
+importFrom(pillar,pillar_shaft)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(tibble,tribble)
