--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ S3method(list_of_models,list_of_formulas)
 S3method(obj_print_data,list_of_models)
 S3method(pillar_shaft,list_of_models)
 S3method(print,hypothesis)
-S3method(print,model_map)
+S3method(print,model_table)
 S3method(roles,list_of_models)
 S3method(tbl_models,data.frame)
 S3method(vec_ptype_abbr,list_of_models)
@@ -24,10 +24,10 @@ S3method(vec_ptype_full,list_of_models)
 export("%>%")
 export(":=")
 export(add_hypothesis)
+export(cast.list_of_models)
 export(construct_tests)
 export(create_models)
 export(expand_formula)
-export(explode.list_of_models)
 export(extract_results)
 export(fetch_call)
 export(fetch_combination)
@@ -47,6 +47,7 @@ export(flatten)
 export(hypothesize)
 export(list_of_models)
 export(mdls)
+export(model_map)
 export(reconstruct)
 export(tbl_compare)
 export(tbl_models)
