added new model map table class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(list_of_models,list_of_formulas)
 S3method(obj_print_data,list_of_models)
 S3method(pillar_shaft,list_of_models)
 S3method(print,hypothesis)
+S3method(print,model_map)
 S3method(print,model_table)
 S3method(roles,list_of_models)
 S3method(tbl_models,data.frame)
@@ -53,12 +54,14 @@ export(tbl_compare)
 export(tbl_models)
 export(tbl_sequential)
 export(theme_gt_compact)
-export(tidy_tests)
+export(tidy)
+export(tidy_models)
 export(update_hypothesis)
 import(vctrs)
 importFrom(dplyr,across)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(generics,tidy)
 importFrom(magrittr,"%>%")
 importFrom(pillar,pillar_shaft)
 importFrom(rlang,":=")
