--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,6 @@ S3method(pillar_shaft,list_of_models)
 S3method(print,hypothesis)
 S3method(print,model_map)
 S3method(print,model_table)
-S3method(roles,list_of_models)
 S3method(tbl_models,data.frame)
 S3method(vec_ptype_abbr,list_of_models)
 S3method(vec_ptype_full,list_of_models)
@@ -50,6 +49,7 @@ export(list_of_models)
 export(mdls)
 export(model_map)
 export(reconstruct)
+export(roles.list_of_models)
 export(tbl_compare)
 export(tbl_models)
 export(tbl_sequential)
