added forging functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ RoxygenNote: 7.1.2
 Depends:
     R (>= 4.0.0),
     vctrs (>= 0.3.8.0),
-    asklepian
+    axe
 Imports: 
     generics,
     lifecycle,
