--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 S3method(fit,formula_list)
 S3method(format,model_archetype)
 S3method(format,model_construct)
-S3method(format,model_table)
+S3method(format,model_forge)
 S3method(hypothesize,dagitty)
 S3method(hypothesize,default)
 S3method(hypothesize,formula)
@@ -13,16 +13,18 @@ S3method(hypothesize,rx)
 S3method(hypothesize,tidy_dagitty)
 S3method(model_archetype,default)
 S3method(model_archetype,glm)
+S3method(model_archetype,list)
 S3method(model_archetype,lm)
 S3method(model_archetype,model_fit)
 S3method(model_construct,default)
 S3method(model_construct,formula_list)
+S3method(model_forge,model_archetype)
 S3method(obj_print_data,model_archetype)
 S3method(obj_print_data,model_construct)
-S3method(obj_print_data,model_table)
+S3method(obj_print_data,model_forge)
 S3method(pillar_shaft,model_archetype)
 S3method(pillar_shaft,model_construct)
-S3method(pillar_shaft,model_table)
+S3method(pillar_shaft,model_forge)
 S3method(print,hypothesis)
 S3method(print,model_map)
 S3method(print,model_table)
@@ -30,16 +32,16 @@ S3method(rebuild,list_of_models)
 S3method(tbl_models,data.frame)
 S3method(vec_cast,model_archetype.model_archetype)
 S3method(vec_cast,model_construct.model_construct)
-S3method(vec_cast,model_table.model_table)
+S3method(vec_cast,model_forge.model_forge)
 S3method(vec_ptype2,model_archetype.model_archetype)
 S3method(vec_ptype2,model_construct.model_construct)
-S3method(vec_ptype2,model_table.model_table)
+S3method(vec_ptype2,model_forge.model_forge)
 S3method(vec_ptype_abbr,model_archetype)
 S3method(vec_ptype_abbr,model_construct)
-S3method(vec_ptype_abbr,model_table)
+S3method(vec_ptype_abbr,model_forge)
 S3method(vec_ptype_full,model_archetype)
 S3method(vec_ptype_full,model_construct)
-S3method(vec_ptype_full,model_table)
+S3method(vec_ptype_full,model_forge)
 export("%>%")
 export(":=")
 export(add_hypothesis)
@@ -69,8 +71,8 @@ export(md_tbl)
 export(mdls)
 export(model_archetype)
 export(model_construct)
+export(model_forge)
 export(model_map)
-export(model_table)
 export(reconstruct)
 export(tbl_compare)
 export(tbl_models)
